--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,8 @@ color: var(--accent-color);
 }
 .hero-button{
 display: inline-block;
+ border: 0px;
+ border-radius: 4px;
 padding: 11px 32px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
@@ -371,7 +373,9 @@ color: rgba(255, 255, 255, 0.6);
 }
 
 .portfolio-filter-btn{
-    
+  display: inline-block; 
+  border: 0px;
+  border-radius: 4px;
   padding-top: 6px;
   padding-bottom: 6px;
   padding-right: 22px;
@@ -390,16 +394,16 @@ color: rgba(255, 255, 255, 0.6);
     .portfolio-filter-btn:focus{
     color: var(--title-text-color);
     background-color: var(--accent-color);
-    border-radius: 4px;
     }
 
 .button{
     
     background: #F5F4FA;
     border-radius: 4px;
-    
-    
-}
+}     
+
+
+
     .button:not(:last-child){
         margin-right: 8px;
     }
