--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ color: var(--accent-color);
 
 
 .hero{
+ padding-top: 200px;
  text-align: center;
  height: 600px;
  background-color: var(--bg-color);
@@ -150,7 +151,7 @@ color: var(--accent-color);
 
 .hero-title{
  margin-bottom: 30px;
- padding-top: 200px;
+ 
 
  font-size: 44px;
  line-height: 1,37;
@@ -249,14 +250,15 @@ color: var(--secondary-text-color);
 /*------START OUR TEAM----------*/
 
 .team{
+    padding-top: 94px;
     padding-bottom: 94px;
     background: #F5F4FA;
     
 }
 
 .team-title{
-padding-top: 94px;
-padding-bottom: 50px;
+
+margin-bottom: 50px;
 
 
 font-weight: 700;
@@ -272,18 +274,20 @@ color: var(--secondary-text-color);
     justify-content: space-between;
 }
 .teammate-item{
+
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 
-.teammate-content{
-    padding-top: 30px;
-    padding-right: 60px;
-    padding-left: 60px;
+.teammate-item h3{
+    
+ text-align: center;
+
 }
 .teammate-name{
+margin-top: 30px;
 margin-bottom: 10px;
 
 font-weight: 500;
@@ -368,7 +372,7 @@ color: rgba(255, 255, 255, 0.6);
 .portfolio-filter{
   display: flex;
   justify-content: center;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 
 }
 
@@ -421,8 +425,9 @@ color: rgba(255, 255, 255, 0.6);
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    border: 1px solid #eeeeee;
     padding-bottom: 20px;
+    
+    
 }
 
 
@@ -434,7 +439,7 @@ color: rgba(255, 255, 255, 0.6);
 }
 .portfolio-list-item h2{
     margin-bottom: 0px;
-  margin-top: 20px;
+  padding-top: 20px;
   padding-left: 24px;
   padding-right: 24px;
 }
@@ -443,9 +448,16 @@ color: rgba(255, 255, 255, 0.6);
   margin-top: 4px;
   padding-left: 24px;
   padding-right: 24px;
+  padding-bottom: 20px;
+  
 }
 
-
+.list-container{
+    border-top:  0px solid #eeeeee;
+    border-left:  1px solid #eeeeee;
+    border-right:  1px solid #eeeeee;
+    border-bottom:  1px solid #eeeeee;
+    }
 
  .portfolio-list-title{
 font-weight: 700;
