--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ color: var(--accent-color);
  
 
  font-size: 44px;
- line-height: 1,37;
+ line-height: 1.37;
  text-align: center;
  letter-spacing: 0.06em;
  text-transform: uppercase;
@@ -172,7 +172,7 @@ min-width: 200px;
 
 font-weight: 700;
 font-size: 16px;
-line-height: 1,88;
+line-height: 1.88;
 align-items: center;
 letter-spacing: 0.06em;
 color: var(--title-text-color);
@@ -198,7 +198,7 @@ background-color:var(--accent-color);
 }
 
 .features-list-item{
-    height: 101px;
+    
     width: 270px;
     }
 
@@ -207,7 +207,7 @@ margin-bottom: 10px;
 
 font-weight: 700;
 font-size: 14px;
-line-height: 1,50;
+line-height: 1.50;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--secondary-text-color);
@@ -216,7 +216,7 @@ color: var(--secondary-text-color);
   
 font-weight: 400;
 font-size: 14px;
-line-height: 1,73;
+line-height: 1.73;
 letter-spacing: 0.03em;
 color: var(--primary-text-color);
 }
@@ -239,7 +239,7 @@ margin-bottom: 50px;
 
 font-weight: 700;
 font-size: 36px;
-line-height: 1,17;
+line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
 color: var(--secondary-text-color);
@@ -263,7 +263,7 @@ margin-bottom: 50px;
 
 font-weight: 700;
 font-size: 36px;
-line-height: 1,17;
+line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
 color: var(--secondary-text-color);
@@ -274,6 +274,8 @@ color: var(--secondary-text-color);
     justify-content: space-between;
 }
 .teammate-item{
+    
+
 
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -292,19 +294,21 @@ margin-bottom: 10px;
 
 font-weight: 500;
 font-size: 16px;
-line-height: 1,19;
+line-height: 1.19;
 letter-spacing: 0.03em;
 color: var(--secondary-text-color);
 }
 .teammate-position{
-padding-bottom: 30px;
 
 font-weight: 400;
 font-size: 16px;
-line-height: 1,19px;
+line-height: 1.19;
 letter-spacing: 0.03em;
 text-align: center;
 color: var(--primary-text-color);
+}
+.description-container{
+    padding-bottom: 30px;
 }
 
 /*------END OUR TEAM----------*/
@@ -341,21 +345,21 @@ font-style: normal;
 .address{
 font-weight: 400;
 font-size: 14px;
-line-height: 1,72;
+line-height: 1.72;
 letter-spacing: 0.03em;
 color: var(--title-text-color);
 }
 .footer-mail-link{
 font-weight: 400;
 font-size: 14px;
-line-height: 1,72;
+line-height: 1.72;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
 .footer-tel-link{
 font-weight: 400;
 font-size: 14px;
-line-height: 1,72;
+line-height: 1.72;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
 }
@@ -387,7 +391,7 @@ color: rgba(255, 255, 255, 0.6);
 
   font-weight: 500;
   font-size: 16px;
-  line-height: 1,625;
+  line-height: 1.625;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);   
@@ -425,7 +429,7 @@ color: rgba(255, 255, 255, 0.6);
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    padding-bottom: 20px;
+    
     
     
 }
@@ -453,11 +457,13 @@ color: rgba(255, 255, 255, 0.6);
 }
 
 .list-container{
-    border-top:  0px solid #eeeeee;
+    border-top: 0px solid #eeeeee;;
     border-left:  1px solid #eeeeee;
     border-right:  1px solid #eeeeee;
     border-bottom:  1px solid #eeeeee;
-    }
+    
+    
+}
 
  .portfolio-list-title{
 font-weight: 700;
@@ -469,7 +475,7 @@ color: var(--secondary-text-color);
 .portfolio-list-text{
 font-weight: 400;
 font-size: 16px;
-line-height: 1,875;
+line-height: 1.875;
 letter-spacing: 0.03em;
 color: var(--primary-text-color);
 }
